--- a/index.html
+++ b/index.html
@@ -155,18 +155,11 @@
 
 	<!-- SLIDER -->
 	<section class="slider">
-		<div>
-			<img src="dist/images/slider1.jpg" class="img-responsive">
-		</div>
-		<div>
-			<img src="dist/images/slider1.jpg" class="img-responsive">
-		</div>
-		<div>
-			<img src="dist/images/slider1.jpg" class="img-responsive">
-		</div>
-		<div>
-			<img src="dist/images/slider1.jpg" class="img-responsive">
-		</div>
+		<div><img src="dist/images/banner-app.png" class="img-responsive"></div>
+		<div><img src="dist/images/banner-app.png" class="img-responsive"></div>
+		<div><img src="dist/images/banner-app.png" class="img-responsive"></div>
+		<div><img src="dist/images/banner-app.png" class="img-responsive"></div>
+		<div><img src="dist/images/banner-app.png" class="img-responsive"></div>
 	</section>
 
 	<!-- REVIEWS -->
